tests/errors/def_func_02.py
from lpython import i32
def func_02(x : i32 ,y : i32) -> i32 :
    print(x,y)

func_02()